增加json数据，增加数据框架，可以实现前端显示数据

--- a/views/index.html
+++ b/views/index.html
@@ -1,81 +1,103 @@
-[[template "top.html" .]]
-<!-- MAIN -->
-<div class="main">
-	<!-- MAIN CONTENT -->
-	<div class="main-content">
-		<div class="container-fluid">
-			<!-- OVERVIEW -->
-			<div class="panel panel-headline">
-				<div class="panel-heading">
-					<h3 class="panel-title">Weekly Overview</h3>
-					<p class="panel-subtitle">Period: Oct 14, 2016 - Oct 21, 2016</p>
-				</div>
-				<div class="panel-body">
-					<div class="row">
-						<div class="col-md-3">
-							<div class="metric">
-								<span class="icon">
-									<i class="fa fa-download"></i>
-								</span>
-								<p>
-									<span class="number">1,252</span>
-									<span class="title">Downloads</span>
-								</p>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="metric">
-								<span class="icon">
-									<i class="fa fa-shopping-bag"></i>
-								</span>
-								<p>
-									<span class="number">203</span>
-									<span class="title">Sales</span>
-								</p>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="metric">
-								<span class="icon">
-									<i class="fa fa-eye"></i>
-								</span>
-								<p>
-									<span class="number">274,678</span>
-									<span class="title">Visits</span>
-								</p>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="metric">
-								<span class="icon">
-									<i class="fa fa-bar-chart"></i>
-								</span>
-								<p>
-									<span class="number">35%</span>
-									<span class="title">Conversions</span>
-								</p>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="metric">
-								<span class="icon">
-									<i class="fa fa-bar-chart"></i>
-								</span>
-								<p>
-									<span class="number">35%</span>
-									<span class="title">Conversions</span>
-								</p>
-							</div>
-						</div>
+<!doctype html>
+<html lang="en">
+
+<head>
+	<title>[[.name]]</title>
+	<meta charset="utf-8"> [[template "top.html" .]]
+	
+	<!-- MAIN -->
+	<div class="main">
+		<!-- MAIN CONTENT -->
+		<div class="main-content">
+			<div class="container-fluid">
+				<!-- OVERVIEW -->
+				<div class="panel panel-headline">
+					<div class="panel-heading">
+						<h3 class="panel-title">[[.name]]</h3>
+						<p class="panel-subtitle">[[.tmp]]</p>
+						<div id="app">
+							<ul>
+							  <li v-for="site in dddd">
+								{{ site }}
+							  </li>
+							</ul>
+						  </div>
 					</div>
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-md-3">
+								<div class="metric">
+									<span class="icon">
+										<i class="fa fa-download"></i>
+									</span>
+									<p>
+										<span class="number">1,252</span>
+										<span class="title">Downloads</span>
+									</p>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="metric">
+									<span class="icon">
+										<i class="fa fa-shopping-bag"></i>
+									</span>
+									<p>
+										<span class="number">203</span>
+										<span class="title">Sales</span>
+									</p>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="metric">
+									<span class="icon">
+										<i class="fa fa-eye"></i>
+									</span>
+									<p>
+										<span class="number">274,678</span>
+										<span class="title">Visits</span>
+									</p>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="metric">
+									<span class="icon">
+										<i class="fa fa-bar-chart"></i>
+									</span>
+									<p>
+										<span class="number">35%</span>
+										<span class="title">Conversions</span>
+									</p>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="metric">
+									<span class="icon">
+										<i class="fa fa-bar-chart"></i>
+									</span>
+									<p>
+										<span class="number">35%</span>
+										<span class="title">Conversions</span>
+									</p>
+								</div>
+							</div>
+						</div>
 
+					</div>
 				</div>
-			</div>
-			<!-- END OVERVIEW -->
+				<!-- END OVERVIEW -->
 
+			</div>
 		</div>
+		<!-- END MAIN CONTENT -->
 	</div>
-	<!-- END MAIN CONTENT -->
-</div>
-<!-- END MAIN -->
-[[template "bottom.html" .]]
+	<script>
+		var tmp = JSON.parse([[.tmp]]);
+			new Vue({
+			  el: '#app',
+			  data: {dddd:
+				  tmp				 			  
+			  }
+			})
+			</script>
+	<!-- END MAIN -->
+	[[template "bottom.html" .]]
