--- a/views/top.html
+++ b/views/top.html
@@ -1,4 +1,9 @@
+<!doctype html>
+<html lang="en">
 
+<head>
+	<title>[[.name]]</title>
+	<meta charset="utf-8"> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<!-- VENDOR CSS -->
@@ -15,6 +20,14 @@
 	<!-- ICONS -->
 	<link rel="apple-touch-icon" sizes="76x76" href="../static/img/apple-icon.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="../static/img/favicon.png">
+		<!-- Javascript -->
+		<script src="../static/js/vendor/jquery/jquery.min.js"></script>
+		<script src="../static/js/vendor/bootstrap/js/bootstrap.min.js"></script>
+		<script src="../static/js/vendor/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+		<script src="../static/js/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js"></script>
+		<script src="../static/js/vendor/chartist/js/chartist.min.js"></script>
+		<script src="../static/js/klorofil-common.js"></script>	
+		<script src="../static/js/md5.js"></script>	
 	<script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
 </head>
 
