--- a/views/bottom.html
+++ b/views/bottom.html
@@ -1,7 +1,7 @@
 <div class="clearfix"></div>
 		<footer>
 			<div class="container-fluid">
-				<p class="copyright">Copyright &copy; 2017.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+				<p class="copyright">Copyright &copy; 2018.Company name All rights reserved.More Templates 龙腾伟业</p>
 				
 			</div>
 		</footer>
