--- a/views/addinfo.html
+++ b/views/addinfo.html
@@ -3,17 +3,12 @@
     <!-- MAIN CONTENT -->
     <div class="main-content">
         <div class="container-fluid">
-            [[if eq .result "OK"]]
-            <div class="alert alert-success alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-                <i class="fa fa-check-circle"></i> Your settings have been succesfully saved
-            </div>
-            [[end]]
-            <h3 class="page-title">添加设备信息</h3>
-            <div class="row">
-                <div class="col-md-6">
+            <h3 class="page-title">[[.drv]] 设备数据点管理
+                <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#drvdots" data-whatever="张三">新增数据点</button>
+            </h3>
+
+            <div class="row" id="app">
+                <div class="col-md-12">
                     <div class="panel">
                         <div class="panel-body">
                             <table class="table table-striped">
@@ -22,11 +17,11 @@
                                         <th style="width: 20%">名称</th>
                                         <th style="width: 40%">类型</th>
                                         <th style="width: 20%">格式</th>
-                                        <th style="width: 20%">操作</th>
+                                        <th style="width: 10%">操作</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr v-for="c in ddob">
+                                    <tr v-for="c in ob">
                                         <td>{{c.Name}}</td>
                                         <td>{{c.Dottype}}</td>
                                         <td>{{c.Datatype}}</td>
@@ -39,64 +34,129 @@
                         </div>
                     </div>
                 </div>
+                <!--设备数据点-->
+                <!--弹出模态窗-->
+                <div class="modal fade" id="drvdots" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">×</span>
+                                </button>
+                                <h4 class="modal-title">新建数据点</h4>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div>数据点名称</div>
+                                    <input type="text" class="form-control" placeholder="text field" id="dotname">
+                                    <br>
+                                    <div>数据点类型</div>
+                                    <select class="form-control" id="dottype">
+                                        <option value="空气温度">空气温度</option>
+                                        <option value="空气湿度">空气湿度</option>
+                                        <option value="土壤温度">土壤温度</option>
+                                        <option value="土壤湿度">土壤湿度</option>
+                                        <option value="风机状态">风机状态</option>
+                                        <option value="水泵状态">水泵状态</option>
+                                    </select>
+                                    <br>
+                                    <div>
+                                        <label class="fancy-radio">
+                                            <input id="datatype" value="数值类" type="radio">
+                                            <span>
+                                                <i></i>数值类</span>
+                                        </label>
+                                        <label class="fancy-radio">
+                                            <input id="datatype" value="开关类" type="radio">
+                                            <span>
+                                                <i></i>开关类</span>
+                                        </label>
+                                    </div>
+                                    <br>
+                                    <div>设备说明</div>
+                                    <textarea class="form-control" placeholder="textarea" rows="4" id="dotinfo"></textarea>
+                                    <br>
+
+                                    <div class="modal-footer">
+                                        <button type="button" id="submitsltdrv" class="btn btn-primary" @click="adddrvdot()">添加数据点</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--设备数据点-->
             </div>
         </div>
     </div>
     <!-- END MAIN CONTENT -->
 </div>
 <script>
-var tmp = JSON.parse([[.usrdrvinfo]]);
-        new Vue({
-            el: '#app',
-            data: {
-                ob: tmp,
-                drvname: "",
-                ddob: [],
+    var tmp = JSON.parse([[.usrdrvinfo]]);
+    new Vue({
+        el: '#app',
+        data: {
+            ob: tmp,
+            drvname: [[.drv]],
+            ddob: [],
+        },
+        methods: {
+            getdrvdot: function (drv) {
+                var self = this
+                $.post("/addinfo",
+                    {
+                        type: "drvdot",
+                        drv: drv,
+                    },
+                    function (data, status) {
+                        
+                        self.ob = JSON.parse(data)
+                    });
             },
-            methods: {
-                adddrvdot: function () {
-                    var self = this;
-                    var name = $("#dotname").val();
-                    var dtype = $("#dottype").val();
-                    var datatype = $("#datatype").val();
-                    var info = $("#dotinfo").val();
-                    if (name.length < 2) {
-                        alert("设备名称长度必须大于2")
-                    }
-                    else {
-                        $.post("/drvmag",
-                            {
-                                type: "creatnewdot",
-                                name: name,
-                                dtype: dtype,
-                                datatype: datatype,
-                                info: info,
-                                drv: self.drvname
-                            },
-                            function (data, status) {
-                                alert("数据1：" + data + "\n状态：" + status);
-                                self.getdrvdot(self.drvname)
-                            });
+            adddrvdot: function () {
+                var self = this;
+                var name = $("#dotname").val();
+                var dtype = $("#dottype").val();
+                var datatype = $("#datatype").val();
+                var info = $("#dotinfo").val();
+                if (name.length < 2) {
+                    alert("设备名称长度必须大于2")
+                }
+                else {
+                    $.post("/drvmag",
+                        {
+                            type: "creatnewdot",
+                            name: name,
+                            dtype: dtype,
+                            datatype: datatype,
+                            info: info,
+                            drv: self.drvname
+                        },
+                        function (data, status) {
+                            alert("数据1：" + data + "\n状态：" + status);
+                            self.getdrvdot(self.drvname)
+                        });
 
-                    }
-                },
-                dltdrvdot: function (dot) {
-                    var self = this
-                    var mymessage = confirm("确定删除设备 " + self.drvname + " 中的 " + dot + " 数据点？");
-                    if (mymessage == true) {
-                        $.post("/drvmag",
-                            {
-                                type: "dltdrvdot",
-                                dotname: dot,
-                            },
-                            function (data, status) {
-                                alert("数据：" + data + "\n状态：" + status);
-                            })
-                    }
-                    else if (mymessage == false) {
-                    }
+                }
+            },
+            dltdrvdot: function (dot) {
+                var self = this
+                var mymessage = confirm("确定删除设备 " + self.drvname + " 中的 " + dot + " 数据点？");
+                if (mymessage == true) {
+                    $.post("/addinfo",
+                        {
+                            type: "dltdrvdot",
+                            dotname: dot,
+                            drv: self.drvname
+                        },
+                        function (data, status) {
+                            alert("数据：" + data + "\n状态：" + status);
+                            self.getdrvdot(self.drvname)
+                        })
+                }
+                else if (mymessage == false) {
                 }
             }
-        })
-    </script>
-[[template "bottom.html" .]]
+        }
+    })
+</script> [[template "bottom.html" .]]
