--- a/views/drvmag.html
+++ b/views/drvmag.html
@@ -50,19 +50,25 @@
                                         <i class="lnr lnr-chevron-up"></i>
                                     </button>
                                 </div>
+
                             </div>
                             <div class="panel-body">
                                 <ul class="list-unstyled activity-timeline">
                                     <li>
+                                        <div class="pull-right">
+                                            <a :href="'addinfo?type=drvdot&drv=' + c.Name ">
+                                                <span>管理数据点</span>
+                                            </a>
+                                        </div>
                                         <i class="fa fa-comment activity-icon"></i>
                                         <p>
                                             <span class="timestamp">创建时间</span>
                                             <span class="timestamp">{{c.Time}}</span>
                                         </p>
                                     </li>
+
                                 </ul>
                                 <div class="pull-right">
-                                    <button class="btn btn-success btn-xs" data-toggle="modal" data-target="#drvdots" @click="getdrvdot(c.Name)">管理</button>
                                     <button class="btn btn-primary btn-xs">修改</button>
                                     <button class="btn btn-danger btn-xs">删除</button>
                                 </div>
@@ -84,80 +90,6 @@
 
                         </div>
                     </div>
-                </div>
-                <!--设备数据点-->
-                <div class="modal fade" id="drvdots" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">×</span>
-                                </button>
-                                <h4 class="modal-title">管理设备数据点</h4>
-                            </div>
-                            <div class="modal-body">
-                                <div class="row">
-                                    <div class="col-md-8">
-                                        <table class="table table-striped">
-                                            <thead>
-                                                <tr>
-                                                    <th style="width: 20%">名称</th>
-                                                    <th style="width: 40%">类型</th>
-                                                    <th style="width: 20%">格式</th>
-                                                    <th style="width: 20%">操作</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr v-for="c in ddob">
-                                                    <td>{{c.Name}}</td>
-                                                    <td>{{c.Dottype}}</td>
-                                                    <td>{{c.Datatype}}</td>
-                                                    <td class="pull-right">
-                                                        <button type="button" class="btn btn-danger btn-xs" @click="dltdrvdot(c.Name)">删除</button>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div>数据点名称</div>
-                                        <input type="text" class="form-control" placeholder="text field" id="dotname">
-                                        <br>
-                                        <div>数据点类型</div>
-                                        <select class="form-control" id="dottype">
-                                            <option value="空气温度">空气温度</option>
-                                            <option value="空气湿度">空气湿度</option>
-                                            <option value="土壤温度">土壤温度</option>
-                                            <option value="土壤湿度">土壤湿度</option>
-                                            <option value="风机状态">风机状态</option>
-                                            <option value="水泵状态">水泵状态</option>
-                                        </select>
-                                        <br>
-                                        <div>
-                                            <label class="fancy-radio">
-                                                <input id="datatype" value="数值类" type="radio">
-                                                <span>
-                                                    <i></i>数值类</span>
-                                            </label>
-                                            <label class="fancy-radio">
-                                                <input id="datatype" value="开关类" type="radio">
-                                                <span>
-                                                    <i></i>开关类</span>
-                                            </label>
-                                        </div>
-                                        <br>
-                                        <div>设备说明</div>
-                                        <textarea class="form-control" placeholder="textarea" rows="4" id="dotinfo"></textarea>
-                                        <br>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" id="submitsltdrv" class="btn btn-primary" @click="adddrvdot()">添加数据点</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--设备数据点-->
                 </div>
             </div>
         </div>
@@ -213,15 +145,10 @@
                 getdrvdot: function (drv) {
                     var self = this;
                     self.drvname = drv
-                    $.post("/drvmag",
+                    $.get("/addinfo",
                         {
                             type: "drvdot",
                             drv: drv,
-                        },
-                        function (data, status) {
-                            //alert("数据：" + data + "\n状态：" + status);
-                            self.ddob = JSON.parse(data)
-                            console.log(self.ddob)
                         })
                 },
                 adddrvdot: function () {
@@ -245,7 +172,6 @@
                             },
                             function (data, status) {
                                 alert("数据：" + data + "\n状态：" + status);
-                                getdrvdot(self.drvname)
                             });
 
                     }
