增加实时数据的存储，前端界面对数据的曲线显示

--- a/views/drvmag.html
+++ b/views/drvmag.html
@@ -75,7 +75,7 @@
                         <ul class="list-unstyled activity-timeline">
                             <li>
                                 <div class="pull-right">
-                                    <a :href="'admin/addinfo?type=drvdot&drv=' + c.Name ">
+                                    <a :href="'/admin/addinfo?type=drvdot&drv=' + c.Name ">
                                         <span>管理数据点</span>
                                     </a>
                                 </div>
