--- a/views/cssjs.html
+++ b/views/cssjs.html
@@ -76,3 +76,4 @@ Moment.js
 <script src="../static/js/jquery.nicescroll.min.js"></script>
 <link href="https://cdn.bootcss.com/video.js/6.3.3/video-js.min.css" rel="stylesheet">
 <script src="https://open.ys7.com/sdk/js/1.3/ezuikit.js"></script>
+<script src="https://cdn.bootcss.com/echarts/4.1.0.rc2/echarts-en.common.min.js"></script>
