--- a/views/index.html
+++ b/views/index.html
@@ -53,13 +53,47 @@
 									</div>
 								</div>
 								<div style="border: 1px solid #ccc;height: 20%;text-align: right;padding-right: 5px">
-									<a href="" class="btn btn-success btn-xs">设置</a>
-									<a href="" class="btn btn-success btn-xs">历史</a>
+									<button type="button" class="btn btn-success btn-xs">设置</a>
+										<button type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#userdrvs" data-user="123" @click="getvalue(v.Drvname,x.Dotname)">历史</a>
 								</div>
 							</div>
 						</div>
 						<div>
 
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="modal fade" id="userdrvs" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">×</span>
+							</button>
+							<h4 class="modal-title">
+								<div id="valuetitle">管理设备</div>
+							</h4>
+						</div>
+						<div class="modal-body">
+							<div>
+								<form class="form-horizontal">
+									<fieldset>
+										<div class="control-group">
+											<div class="controls">
+												<div class="input-prepend input-group">
+													<span class="add-on input-group-addon">
+														<i class="fa fa-calendar"></i>
+													</span>
+													<input type="text" id="date-picker" class="form-control" value="03/18/2015" />
+												</div>
+											</div>
+										</div>
+									</fieldset>
+								</form>
+							</div>
+							<!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
+							<div id="main" style="width: 500px;height:400px;"></div>
 						</div>
 					</div>
 				</div>
@@ -70,13 +104,92 @@
 </div>
 <script>
 	var tmp = JSON.parse([[.tmp]]);
-	console.log([[.tmp]])
 	new Vue({
 		el: '#app',
 		data: {
 			ob: tmp
+		},
+		methods: {
+			getvalue: function (drv, dot) {
+				var self = this;
+				$("#valuetitle").text(drv + ":" + dot + "  历史数据")
+				$.post("/admin/",
+					{
+						type: "dotvalue",
+						drv: drv,
+						dot: dot,
+						start: new Date().toLocaleDateString(),
+						stop: new Date(new Date().getTime() + 24 * 60 * 60 * 1000).toDateString()
+					},
+					function (data, status) {
+						myChart.setOption({
+							xAxis: {
+								type: 'category',
+								boundaryGap: false,
+								data: JSON.parse(data).Time
+							},
+							series: [{
+								// 根据名字对应到相应的系列
+								name: dot,
+								data: JSON.parse(data).Data
+							}]
+						});
+					});
+			},
 		}
 	})
+	//自适应宽高
+	var myChart = echarts.init(document.getElementById('main'));
+	var myChartContainer = function () {
+		document.getElementById('main').style.width = document.getElementById('valuetitle').offsetWidth + 10 + 'px'
+	};
+	myChartContainer();
+
+	// 显示标题，图例和空的坐标轴
+	myChart.setOption({
+		xAxis: {
+			type: 'category',
+			boundaryGap: false,
+			data: []
+		},
+		yAxis: {
+			type: 'value',
+			data: ['周一', '周二', '周三', '周四', '周五', '周六', '周日']
+		},
+		tooltip: {
+			trigger: 'axis',
+		},
+		series: [{
+			name: '最高气温',
+			type: 'line',
+			data: [11, 11, 15, 13, 12, 13, 10],
+			markPoint: {
+				data: [
+					{ type: 'max', name: '最大值' },
+					{ type: 'min', name: '最小值' }
+				]
+			},
+			markLine: {
+				data: [
+					{ type: 'average', name: '平均值' }
+				]
+			}
+		}]
+	});
+	//浏览器大小改变时重置大小
+	window.onresize = function () {
+		myChartContainer();
+		myChart.resize();
+	};
+
 	console.log(tmp)
 </script>
+<!-- Basic Single Date Picker -->
+<script type="text/javascript">
+	$(document).ready(function() {
+	  $('#date-picker').daterangepicker({ singleDatePicker: true }, function(start, end, label) {
+		console.log(start.toISOString(), end.toISOString(), label);
+	  });
+	});
+	</script>
 <!-- END MAIN -->
