--- a/views/top.html
+++ b/views/top.html
@@ -85,7 +85,7 @@
 						<span class="icon color5">
 							<i class="fa fa-home"></i>
 						</span>总览
-						<span class="label label-default">2</span>
+						
 					</a>
 				</li>
 				<li>
@@ -103,7 +103,7 @@
 							<a href="/admin/drvmag">设备管理</a>
 						</li>
 						<li>
-								<a href="/admin/drvmag">监控设备</a>
+								<a href="/admin/video">监控设备</a>
 							</li>
 					</ul>
 				</li>
